--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "framer-motion": "^7.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
